FAISS семантический поиск и сборка индекса

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 TELEGRAM_BOT_TOKEN=your-token
 OPENROUTER_API_KEY=your-openrouter-key
+OPENROUTER_EMBEDDING_MODEL=qwen/qwen3-embedding-8b
 OPENROUTER_PROXY_URL=http://proxy:8888
+VECTOR_INDEX_PATH=data/products.faiss
 NO_PROXY=localhost,127.0.0.1
