--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,10 @@ license = { text = "MIT" }
 
 dependencies = [
   "aiogram>=3.4.1",
+  "faiss-cpu>=1.9.0.post1",
   "fastmcp==2.12.4",
   "mcp==1.17.0",
+  "numpy>=1.26.0",
   "pydantic>=2.7.0",
   "pydantic-settings>=2.2.1",
   "python-dotenv>=1.0.0",
